// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate Admin Files Generate admin files for App Router 1`] = `
{
  "User": "import React from 'react';
import PrismaTable from 'components/PrismaTable';

export default function UserPage() {
  return <PrismaTable model="User" />;
}
",
}
`;

exports[`Generate Admin Files Generate admin files for Pages Router explicitly 1`] = `
{
  "User": "import React from 'react';
import PrismaTable from 'components/PrismaTable';

const User: React.FC = () => {
  return <PrismaTable model="User" />;
};

export default User;
",
}
`;

exports[`Generate Admin Files Should back with models pages 1`] = `
{
  "Post": "import React from 'react';
import PrismaTable from 'components/PrismaTable';

const Post: React.FC = () => {
  return <PrismaTable model="Post" />;
};

export default Post;
",
  "User": "import React from 'react';
import PrismaTable from 'components/PrismaTable';

const User: React.FC = () => {
  return <PrismaTable model="User" />;
};

export default User;
",
}
`;
